Adds better logging

--- a/cmd/locus/sample.conf
+++ b/cmd/locus/sample.conf
@@ -1,7 +1,8 @@
 # Default location at /etc/locus.conf
 globals:
   port: 5557
-  verbose_logging: true
+  access_log: /var/log/locus/access.log
+  error_log: /var/log/locus/error.log
 sites:
   # For testing purposes you can use http://localhost:5557/?locus_override=http://sample.locus.xyz
   - name: sample
