--- a/cmd/locus/sample.conf
+++ b/cmd/locus/sample.conf
@@ -4,7 +4,7 @@ globals:
   access_log: /var/log/locus/access.log
   error_log: /var/log/locus/error.log
 sites:
-  # For testing purposes you can use http://localhost:5557/?locus_override=http://sample.locus.xyz
+  # For testing purposes you can use http://localhost:5557/?locus_host=sample.locus.xyz
   - name: sample
     match: http://sample.locus.xyz
     upstream: http://locus-sample.s3-website-us-east-1.amazonaws.com
